--- a/index.html
+++ b/index.html
@@ -20,7 +20,45 @@
 </head>
 
 <body>
-
+  <!-- Phone Us Today Banner -->
+  <div class="row">
+    <div class="col-12">
+      <h5 class="text-center mt-2">Call Us Today +1 (555) 234 5678</h5>
+    </div>
+  </div>
+  <!-- Navbar -->
+  <div class="container">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Eire Electrical</a>
+        <!-- Mobile Toggle Button -->
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav ms-auto">
+            <a class="nav-link active ms-auto" aria-current="page" href="#">Home</a>
+            <a class="nav-link ms-auto" href="#">About</a>
+            <!-- Services offered dropdown -->
+            <li class="nav-item dropdown ms-auto">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                data-bs-toggle="dropdown" aria-expanded="false">
+                Services Offered
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <li><a class="dropdown-item" href="#">Residential</a></li>
+                <li><a class="dropdown-item" href="#">Service 2</a></li>
+                <li><a class="dropdown-item" href="#">Service 3</a></li>
+              </ul>
+            </li>
+            <!-- Contact Us -->
+            <a class="nav-link ms-auto" href="#">Contact Us</a>
+          </div>
+        </div>
+      </div>
+    </nav>
+  </div>
 
 
   <!-- Option 1: Bootstrap Bundle with Popper -->
