Changed background colour of phone banner

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
 <body>
   <!-- Phone Us Today Banner -->
-  <div class="row">
+  <div id="call_us_banner" class="row">
     <div class="col-12">
-      <h5 class="text-center mt-2">Call Us Today +1 (555) 234 5678</h5>
+      <h5 id="call_us_text" class="text-center mt-2">Call Us Today +1 (555) 234 5678</h5>
     </div>
   </div>
   <!-- Navbar -->
