--- a/index.html
+++ b/index.html
@@ -60,7 +60,18 @@
     </nav>
   </div>
 
-
+  <!-- Sub Footer -->
+  <div id="sub_footer">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <p class="text-center mb-1">Website developed by <a class="portfolio_link text-decoration-none"
+              href="https://stephens-portfolio.com/">Stephen Mc Govern</a></p>
+          <p class="text-center mb-1">Copyright &copy; Eire Electrical 2022</p>
+        </div>
+      </div>
+    </div>
+  </div>
   <!-- Option 1: Bootstrap Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
