--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <li class="nav-item dropdown ms-auto">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
                 data-bs-toggle="dropdown" aria-expanded="false">
-                Services Offered
+                Our Services
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <li><a class="dropdown-item" href="#">Residential</a></li>
@@ -60,14 +60,54 @@
     </nav>
   </div>
 
+  <!-- Footer -->
+  <div id="main_footer">
+    <div class="container">
+      <div class="row mb-3 mt-3">
+        <!-- Address & Number -->
+        <div class="col-12 col-md-4 text-center text-md-start">
+          <h5 class="mb-3">Eire Electrical</h5>
+          <p class="mb-1">1 Any office, any street, Pensacola, FL, 90210</p>
+          <p class="mb-1">Cell: +1 (555) 234 5678</p>
+          <p class="mb-1">Licensed FL Lic. #841927</p>
+          <p class="mb-1">We accept payment via</p>
+          <p class="mb-0">
+            <i class="card_icon fab fa-cc-visa"></i>
+            <i class="card_icon fab fa-cc-mastercard"></i>
+            <i class="card_icon fab fa-cc-amex"></i>
+          </p>
+        </div>
+        <!-- Dividing Line Below Medium Screens -->
+        <hr class="mt-3 d-md-none">
+        <!-- Our Services -->
+        <div class="text-center col-12 col-md-4">
+          <h5 class="mb-3">Our Services</h5>
+          <a class="mb-1 text-decoration-none text-white" href="">> Service 1</a>
+          <hr class="mb-1 mt-1">
+          <a class="mb-1 text-decoration-none text-white" href="">> Service 2</a>
+          <hr class="mb-1 mt-1">
+          <a class="mb-1 text-decoration-none text-white" href="">> Service 3</a>
+        </div>
+        <!-- Dividing Line Below Medium Screens -->
+        <hr class="mt-3 d-md-none">
+        <!-- Areas Covered -->
+        <div class="col-12 col-md-4 text-center text-md-end">
+          <h5 class="mb-3">We Cover</h5>
+          <p class="mb-1">Pensacola</p>
+          <p class="mb-1">Pensacola</p>
+          <p class="mb-1">Pensacola</p>
+        </div>
+      </div>
+    </div>
+  </div>
   <!-- Sub Footer -->
   <div id="sub_footer">
     <div class="container">
       <div class="row">
         <div class="col-12">
           <p class="text-center mb-1">Website developed by <a class="portfolio_link text-decoration-none"
-              href="https://stephens-portfolio.com/">Stephen Mc Govern</a></p>
-          <p class="text-center mb-1">Copyright &copy; Eire Electrical 2022</p>
+              href="https://stephens-portfolio.com/" target="_blank">Stephen Mc Govern</a></p>
+          <p class="text-center mb-1">Copyright &copy; Eire Electrical 2022 | All rights Reserved</p>
         </div>
       </div>
     </div>
