--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- External Css -->
   <link rel="stylesheet" href="/assets/css/style.css">
   <!-- Page Title -->
-  <title>Bootstrap 5 Template</title>
+  <title>Eire Electrical</title>
   <!-- JQuery -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
@@ -28,7 +28,7 @@
   </div>
   <!-- Navbar -->
   <div class="container">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Eire Electrical</a>
         <!-- Mobile Toggle Button -->
@@ -59,6 +59,19 @@
       </div>
     </nav>
   </div>
+
+  <!-- Hero Image -->
+  <section id="hero_image">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <h4 class="text-white text-center">Test Text</h4>
+          <p class="text-white text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, eius.</p>
+          <!-- Hero Image Inserted Here -->
+        </div>
+      </div>
+    </div>
+  </section>
 
   <!-- Footer -->
   <div id="main_footer">
