Added the about us section. Not populated with any info

--- a/index.html
+++ b/index.html
@@ -21,11 +21,14 @@
 
 <body>
   <!-- Phone Us Today Banner -->
-  <div id="call_us_banner" class="row">
-    <div class="col-12">
-      <h5 id="call_us_text" class="text-center mt-2">Call Us Today +1 (555) 234 5678</h5>
+  <div id="call_us_banner">
+    <div class="row">
+      <div class="col-12">
+        <h5 id="call_us_text" class="text-center mt-2">Call Us Today +1 (555) 234 5678</h5>
+      </div>
     </div>
   </div>
+
   <!-- Navbar -->
   <div class="container">
     <nav class="navbar navbar-expand-lg navbar-light">
@@ -68,6 +71,24 @@
           <h4 class="text-white text-center">Test Text</h4>
           <p class="text-white text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, eius.</p>
           <!-- Hero Image Inserted Here -->
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- About -->
+  <section id="about_us_section">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <h4 id="about_us_header" class="text-center">About Us</h4>
+          <p class="text-center">Eire Electrical Services in Pensacola</p>
+          <p class="text-center">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat dolores cum repellat
+            quisquam blanditiis non. Quasi cupiditate officiis animi quam eligendi repudiandae ratione, at ut laborum
+            sit iure ducimus repellendus, excepturi eaque vel unde voluptate quidem ad. Voluptates sint rerum
+            perferendis, possimus eligendi, laboriosam et, debitis sit nihil eum sapiente!
+          </p>
         </div>
       </div>
     </div>
