Added scroll to top button

--- a/index.html
+++ b/index.html
@@ -63,6 +63,11 @@
     </nav>
   </div>
 
+  <!-- Scroll to top of page button -->
+  <button type="button" class="btn btn-floating btn-lg" id="btn-back-to-top">
+    <i class="fas fa-arrow-up mx-auto my-auto"></i>
+  </button>
+
   <!-- Hero Image -->
   <section id="hero_image">
     <div class="container">
